<resources>
    <string name="app_name">Planit</string>
    <string name="task_detail_label">Task Details</string>
    <string name="task_create_label">Create Task</string>
    <string name="task_edit_label">Edit Task</string>
    <string name="note_create_label">Create Note</string>
    <string name="note_edit_label">Edit Note</string>
    <string name="subject_create_label">Create Subject</string>
    <string name="subject_edit_label">Edit Subject</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- COMMON -->

    <!-- Common buttons -->

    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>

    <!-- Common toasts -->


    <!-- Common dialogs -->
    <string name="dialog_fill_out_all_fields">Please fill out all fields</string>
    <string name="dialog_unexpected_error">An unexpected error ocurred. Please try again later.</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_positive_button">OK</string>

    <!-- Common exception messages -->
    <string name="exception_saving_entity">Error saving the entity</string>

    <!-- TASKS -->

    <!-- Task List -->

    <string name="tasks_fragment_title">Tasks</string>
    <string name="task_list_title">Task List</string>

    <string name="pending_tasks">Pending Tasks</string>
    <string name="overdue_tasks">Overdue Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="no_subject">(No subject)</string>

    <string name="add_task_button">Add Task</string>
    <string name="at_time">at</string>

    <!-- Task CRUD -->

    <string name="task_details_title">Task Details</string>
    <string name="task_edit_title">Edit Task</string>
    <string name="task_create_title">Create Task</string>

    <string name="task_name">Name:</string>
    <string name="task_description">Description:</string>
    <string name="task_subject">Subject:</string>
    <string name="task_due_date">Due date:</string>
    <string name="task_due_time">Due time:</string>
    <string name="task_priority">Priority:</string>
    <string name="task_type">Type:</string>
    <string name="task_completed">Completed</string>

    <string name="task_name_hint">Task name</string>
    <string name="task_description_hint">Task description</string>
    <string name="task_due_date_hint">DD/MM/YYYY</string>
    <string name="task_due_time_hint">HH:MM</string>

    <string name="edit_task_button">Edit Task</string>
    <string name="delete_task_button">Delete Task</string>

    <string-array name="importance_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="type_array">
        <item>Study</item>
        <item>Homework</item>
        <item>Exam</item>
        <item>Project</item>
        <item>Practice</item>
        <item>Presentation</item>
        <item>Meeting</item>
        <item>Other</item>
    </string-array>

    <!-- Task toasts -->
    <string name="toast_task_created">Task created successfully</string>
    <string name="toast_task_updated">Task updated successfully</string>
    <string name="toast_task_deleted">Task deleted successfully</string>

    <string name="toast_task_status_updated">Task status updated</string>

    <!-- Task dialogs -->
    <string name="dialog_task_create_error">Error creating task</string>
    <string name="dialog_task_update_error">Error updating task</string>
    <string name="dialog_task_delete_error">Error deleting task</string>

    <string name="dialog_task_name_validation_error">The name must be between 3 and 50 characters</string>
    <string name="dialog_task_description_validation_error">The description cannot exceed 400 characters</string>
    <string name="dialog_task_time_validation_error">The time must be in HH:MM format</string>


    <!-- NOTES -->

    <string name="notes_fragment_title">Notes</string>
    <string name="note_list_title">Note List</string>

    <string name="add_note_button">Add Note</string>

    <!-- Note CRUD -->

    <string name="note_create_title">Create Note</string>
    <string name="note_edit_title">Edit Note</string>

    <string name="note_title_hint">Note Title</string>
    <string name="note_content_hint">Note Content</string>

    <!-- Note toasts -->
    <string name="toast_note_created">Note created successfully</string>
    <string name="toast_note_updated">Note updated successfully</string>
    <string name="toast_note_deleted">Note deleted successfully</string>

    <!-- Note dialogs -->
    <string name="dialog_note_create_error">Error creating note</string>
    <string name="dialog_note_update_error">Error updating note</string>
    <string name="dialog_note_delete_error">Error deleting note</string>

    <string name="dialog_note_title_validation_error">The title cannot exceed 50 characters</string>
    <string name="dialog_note_content_validation_error">The content cannot exceed 30.000 characters</string>


    <!-- SUBJECTS -->

    <string name="subjects_fragment_title">Subjects</string>
    <string name="subject_list_title">Subject List</string>

    <string name="add_subject_button">Add Subject</string>

    <!-- Subject CRUD -->

    <string name="subject_create_title">Create Subject</string>
    <string name="subject_name">Name:</string>
    <string name="subject_color">Color:</string>

    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_purple">Purple</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_orange">Orange</string>
    <string name="color_pink">Pink</string>
    <string name="color_black">Black</string>
    <string name="color_white">White</string>

    <string name="subject_edit_title">Edit Subject</string>

    <string name="subject_name_hint">Subject Name</string>

    <!-- Subject toasts -->
    <string name="toast_subject_created">Subject created successfully</string>
    <string name="toast_subject_updated">Subject updated successfully</string>
    <string name="toast_subject_deleted">Subject deleted successfully</string>

    <!-- Subject dialogs -->
    <string name="dialog_subject_create_error">Error creating subject</string>
    <string name="dialog_subject_update_error">Error updating subject</string>
    <string name="dialog_subject_delete_error">Error deleting subject</string>

    <string name="dialog_subject_name_validation_error">The name must be between 3 and 50 characters</string>
    <string name="dialog_subject_color_validation_error">Please select a valid color</string>


</resources>