<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NoteCreateActivity">

    <!-- Título de la pantalla -->
    <TextView
        android:id="@+id/textViewCreateNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_create_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextNoteTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/note_title_hint"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCreateNote" />

    <EditText
        android:id="@+id/editTextNoteContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/note_content_hint"
        android:textSize="14sp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:minLines="10"
        app:layout_constraintTop_toBottomOf="@id/editTextNoteTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonSaveNote"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/buttonSaveNote"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/save_button"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>