<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título de la pantalla -->
    <TextView
        android:id="@+id/titleTaskDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_details_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center" />

    <!-- Variable: taskName -->
    <TextView
        android:id="@+id/taskDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="8dp" />

    <!-- Variable: taskDescription -->
    <TextView
        android:id="@+id/taskDetailDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:textSize="16sp"
        android:maxLines="10" />


    <!-- Variable: taskSubject -->
    <TextView
        android:id="@+id/taskDetailSubject"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingBottom="8dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Variable: taskDueDate -->
    <TextView
        android:id="@+id/taskDetailDueDate"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingBottom="8dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Variable: taskDueTime -->
    <TextView
        android:id="@+id/taskDetailDueTime"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingBottom="8dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Variable: taskImportance -->
    <TextView
        android:id="@+id/taskDetailImportance"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Variable: taskType -->
    <TextView
        android:id="@+id/taskDetailType"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingBottom="8dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/taskDetailCompletedSwitch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingBottom="8dp"
        android:text="@string/task_completed"
        android:textStyle="bold" />

    <!-- Espacio extra para empujar los botones hacia abajo -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Contenedor de los botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Variable: editButton -->
        <Button
            android:id="@+id/editTaskButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/edit_task_button"/>

        <!-- Variable: deleteButton -->
        <Button
            android:id="@+id/deleteTaskButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/delete_task_button"
            android:backgroundTint="@color/design_default_color_error"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
